# Backend-Documents-Chatbot-Question-Answering

./: .gitignore  README.md  docker-compose.yml  drop_collection.py  id_notebook  migrate.py  requirements.txt  run.sh
api/: __init__.py  client.py  main.py  models.py  notebook_service.py
migrations/: 8.surrealql  all.sql  all.surrealql  down_all.sql
open_notebook/: config.py  utils.py
prompts/: chat.jinja
sql-agent-master/: .gitignore  README.md  pyproject.toml
sql-agent-master/data/: Purchasing.ProductVendor.xlsx  Purchasing.PurchaseOrderDetail.xlsx  Purchasing.PurchaseOrderHeader.xlsx  Purchasing.ShipMethod.xlsx  Purchasing.Vendor.xlsx  XLSX Dataset.xlsx
sql-agent-master/sql/: load_and_transform_company_simul.py  load_and_transform_hr_employee.py  load_and_transform_laptop_prices.py  load_and_transform_wc_2022.py  load_and_transform_youtube_influencers.py
sql-agent-master/src/: main.py  test.py  upload_postgres.py
sql-agent-master/src/database/: __init__.py  db.py
sql-agent-master/src/graph/: __init__.py  sql_graph.py
sql-agent-master/src/prompt/: __init__.py  plan_prompt.py  query_prompt.py  validate_prompt.py
sql-agent-master/src/prompt/schemas/: __init__.py  company_schema.py  fifa_wc_2022_schema.py  hr_employee_schema.py  laptop_prices_schema.py  youtube_influencers_schema.py
sql-agent-master/src/tool/: __init__.py  query_tool.py
tests/: test_db.py
utils/: ask.py  ask_chat_session.py  auto_setup_step1_model.py  auto_setup_step2_notebooks.py  auto_setup_step3_source.py  chat_session.py  description_tabular.txt  eval.py  eval.txt  search.py  (+6 more)
(+50 files in other folders)
